--- a/res/layout/ns_menu_row_header.xml
+++ b/res/layout/ns_menu_row_header.xml
@@ -3,6 +3,15 @@
     android:layout_width="match_parent"
     android:layout_height="48dp"
     android:gravity="center_vertical" >	 
+     <SearchView
+        android:id="@+id/drawableSearchFilter"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true" 
+        android:iconifiedByDefault="false"
+        android:queryHint="Filter">
+    </SearchView>
     <TextView
         android:id="@+id/menurow_title"
         android:layout_width="match_parent"
