--- a/res/layout/ns_menu_row_header.xml
+++ b/res/layout/ns_menu_row_header.xml
@@ -21,6 +21,7 @@
         android:paddingBottom="10dp"
         android:paddingLeft="10dp"
         android:paddingTop="10dp"
+        android:layout_marginTop="48dp"
         android:singleLine="true"
         android:text=""
         android:textAllCaps="true"
